--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,7 @@
     <artifactId>seMethods</artifactId>
     <version>0.1.0.1</version>
     <properties>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <java.version>1.8</java.version>
     </properties>
 
 </project>
