--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
     <artifactId>seMethods</artifactId>
     <version>0.1.0.1</version>
     <properties>
-        <java.version>1.7</java.version>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
 
 </project>
