--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ services:
   - docker
 
 after_success:
-  - docker build -t seMethods .
-  - docker run seMethods
+  - docker build -t Dockerfile .
+  - docker run Dockerfile
