--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ services:
   - docker
 
 after_success:
-  - docker build -t Dockerfile .
-  - docker run Dockerfile
+  - docker build -t dockerfile .
+  - docker run dockerfile
